5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_825.log
== TEST (2019-03-26 18:38:55) 
-- CODE:
valor=int(input("Valor de um raio r:"))
area=r:A=math*(r,2)
volume= r:V=4/3 math*(r,3)
print(round (x,3))


-- ERROR:
File "XXXX", line 2
    area=r:A=math*(r,2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:21) 
-- CODE:
valor=int(input("Valor de um raio r:"))
area=math*(r,2)
volume=4/3 math*(r,3)
print(round (x,3))


-- ERROR:
File "XXXX", line 3
    volume=4/3 math*(r,3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:34) 
-- CODE:
valor=int(input("Valor de um raio r:"))
area=math*(r,2)
volume=4/3math*(r,3)
print(round (x,3))


-- ERROR:
File "XXXX", line 3
    volume=4/3math*(r,3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:54) 
-- CODE:
valor=int(input("Valor de um raio r:"))
area=math*(r,2)
volume=4//3math*(r,3)
print(round (x,3))


-- ERROR:
File "XXXX", line 3
    volume=4//3math*(r,3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:39:15) 
-- CODE:
from math import*
area=raio**2*pi 
volume=4/3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=raio**2*pi 
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:39:30) 
-- CODE:
from math import*
area=r**2*pi 
volume=4/3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=r**2*pi 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:39:50) 
-- CODE:
from math import*
area=r**2*pi 
volume=4/3*pi*r**3
print(round(x,3))

-- EXECUTION TIME:
0.267351
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 2, in <module>
    area=r**2*pi 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:39:50) 
-- CODE:
from math import*
area=r**2*pi 
volume=4/3*pi*r**3
print(round(x,3))

-- EXECUTION TIME:
0.273293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 2, in <module>
    area=r**2*pi 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:40:02) 
-- CODE:
from math import*
area=pi*r**2 
volume=4/3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*r**2 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:40:13) 
-- CODE:
from math import*
area=pi*raio**2 
volume=4/3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*raio**2 
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:06) 
-- CODE:
from math import*
area=pi*raio**2 
volume=4//3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*raio**2 
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:12) 
-- CODE:
from math import*
area=pi*r**2 
volume=4//3*pi*r**3
print(round(x,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*r**2 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:41:14) 
-- CODE:
from math import*
area=pi*r**2 
volume=4//3*pi*r**3
print(round(x,3))

-- EXECUTION TIME:
0.224933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 2, in <module>
    area=pi*r**2 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:09:32) 
-- CODE:
r = float(input("Insira um raio: "))
from math import *
A = pi*r**2
V = (4/3)*pi*r**3
print(round(A, 3))
print(round(V, 3))


-- EXECUTION TIME:
0.196094
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
